# py-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
altpay/: __init__.py  __meta__.py  credentials.py  enums.py  errors.py  models.py  signing.py  webhook.py
altpay/client/: __init__.py  async_client.py  base.py  sync_client.py
altpay/methods/: __init__.py  account.py  base.py  invoices.py  withdrawals.py
tests/: test_client_retry.py  test_models.py  test_signing.py  test_webhook.py
